add logic of account and fix the sort
